--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>YuriHnrq</title>
 </head>
 <body>
+    <header>
+        Yuri Henrique B. Maciel
+    </header>
+    <nav>
+
+    </nav>
     <main>
-        <h1>Teste</h1>
+        
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
